# selenium-examples

./: README.md
selene_multiple_browsers/: .envrc  .python-version  Makefile  README.md  pyproject.toml
selene_multiple_browsers/docker/: compose.yaml
selene_multiple_browsers/tests/: conftest.py  test_multiple_browsers.py
